[package]
name = "whatever"
version = "0.1.1"
authors = ["petechen <15736755067@163.com>"]
edition = "2018"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/whatever/blob/main/README.md"
repository = "https://github.com/ptechen/whatever.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Contains all error types."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.5"
chrono = "^0.4.19"
clickhouse = "0.9.3"
csv = "^1.1.6"
enum-repr = "^0.2.6"
libc = "^0.2.104"
rbatis = "3.0.29"
rbatis-core = "3.0.19"
r2d2_redis = "0.14.0"
reqwest = "^0.11.8"
serde = {version = "^1.0.133", features= ["derive"]}
serde_json = "^1.0.74"
thiserror = "1.0.30"
validator = { version = "0.14.0", features = ["derive"] }
zip = "^0.5.13"
tokio = { version = "1", features = ["full"] }

[features]
full = ["std_err", "rbatis_err", "reqwest_err", "serde_json_err", "chrono_err", "zip_err", "clickhouse_err", "csv_err", "axum_err", "redis_err", "task_join_err"]
std_err = []
sqlx_err = []
rbatis_err = []
reqwest_err = []
serde_json_err = []
chrono_err = []
zip_err = []
clickhouse_err = []
csv_err = []
axum_err = []
redis_err = []
task_join_err = []
