[package]
name = "whatever"
version = "0.2.32"
authors = ["petechen <15736755067@163.com>"]
edition = "2018"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/whatever/blob/main/README.md"
repository = "https://github.com/ptechen/whatever.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Contains all error types."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.5"
chrono = "^0.4"
clickhouse = "^0.9"
csv = "^1.1"
rbatis = {version  = "<3.1"}
r2d2_redis = "^0.14"
reqwest = "^0.11.8"
serde = {version = "^1.0", features= ["derive"]}
serde_json = "^1.0.74"
thiserror = "^1.0"
validator = { version = "^0.14", features = ["derive"] }
zip = "^0.5"
tokio = { version = "^1.0", features = ["full"] }

[features]
full = ["std_err", "rbatis_err", "reqwest_err", "serde_json_err", "chrono_err", "zip_err", "clickhouse_err", "csv_err", "axum_err", "redis_err", "task_join_err"]
std_err = []
rbatis_err = []
reqwest_err = []
serde_json_err = []
chrono_err = []
zip_err = []
clickhouse_err = []
csv_err = []
axum_err = []
redis_err = []
task_join_err = []
